# motos-max-cordialidad

./: .agent.md  .dockerignore  .env.local.example  .eslintrc.js  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  setup-env.bat  setup-env.sh  test-smtp.js  tsconfig.base.json
.github/: SECRETS.md
.husky/: pre-commit  pre-push
.playwright-mcp/: page-2026-07-05T03-03-46-434Z.yml
apps/agents/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/agents/src/: config.py  health.py  main.py  saas_client.py
apps/agents/src/agents/admin/: admin_tools_dispatch.py  agent.py  memory.py  prompts.py  state.py
apps/agents/src/agents/shared/: llm_factory.py
apps/agents/src/api/: admin_handler.py  service_auth.py
apps/agents/src/reports/: models.py  report_generator.py  uploader.py
apps/agents/src/reports/templates/: monthly.py  weekly.py
apps/agents/src/schedulers/: report_jobs.py  scheduler.py  stock_alert.py
apps/agents/src/tools/: admin_tools.py
apps/agents/tests/: test_admin_agent.py  test_admin_handler.py  test_admin_tools.py  test_config.py  test_health.py  test_llm_factory.py  test_report_jobs.py  test_reports.py  test_saas_client.py  test_service_auth.py  test_stock_alert.py
docs/: ADR.en.md  ADR.md  ARCHITECTURE.en.md  ARCHITECTURE.md  PASSWORD_RECOVERY_FIXES.md  RUNBOOK.en.md  RUNBOOK.md  SECURITY.en.md  SECURITY.md
openspec/: config.yaml
perf/: README.md  latency.k6.js  seed-volume.sql
scripts/: dev-local.mjs  free-ports.mjs
(+590 files in other folders)
