[project]
name = "motoworkshop-agents"
version = "0.1.0"
description = "MotoWorkshop multi-agent microservice (AgentAdmin, reports, stock alerts)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "langgraph>=0.2.45",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
    "redis>=5.2",
    "httpx>=0.27",
    "pydantic-settings>=2.6",
    "apscheduler>=3.10",
    "pandas>=2.2",
    "sentry-sdk>=2.18",
    "pyjwt>=2.9",
    "reportlab>=4.2",
    "matplotlib>=3.9",
    "boto3>=1.35",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
